# pinocchio-rerun

./: .clang-format  .cmake-format.yaml  .gersemirc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: linux-conda.yml
.github/workflows/conda/: conda-env.yml
examples/: solo8.py  talos.py  ur5.py
pyseptum/: CMakeLists.txt  module.cpp
python/: CMakeLists.txt  module.cpp
python/pinocchio_rerun/: __init__.py
python/pyseptum/: __init__.py
src/: RerunVisualizer.cpp  RerunVisualizer.hpp  data_types.hpp  eigen_adapters.hpp  load_mesh.cpp  load_mesh.hpp  main.cpp  pinocchio.cpp  pinocchio.hpp  pinocchio_rerun.hpp  pinviz.cpp  pinviz.hpp  rerun_visualizer.cpp  rerun_visualizer.hpp  septum.hpp
tests/: CMakeLists.txt  test_load_mesh.cpp  test_load_robot.cpp  test_rerun.cpp  util.cpp  util.hpp
